# pyneuroglm

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  README.rst  pyproject.toml  setup.py  tutorial.md
docs/: KNOWN_ISSUES.md  MATLAB_DIFFERENCES.md  test-reorganization-plan.md
docs/regression/: poisson_likelihood_derivation.md
example/: exampleDM.mat  exampleData.mat  tutorial.ipynb  tutorial.py
pyneuroglm/: basis.py  design.py  experiment.py
src/pyneuroglm/: __init__.py  basis.py  design.py  experiment.py  util.py
src/pyneuroglm/regression/: empirical_bayes.py  likelihood.py  math.md  negloglik.py  nonlinearity.py  optim.py  posterior.py  prior.py  sklearn.py
tests/: basis.npy  test_basis.py  test_design.py  test_design_matrix_parity.py  test_empirical_bayes_quadrature.py  test_experiment.py  test_objective_cache.py  test_poisson_likelihood_parity.py  test_pyneuroglm.py
tests/regression/: conftest.py  test_empirical_bayes.py  test_likelihood.py  test_optim.py  test_prior.py  test_sklearn.py
