[project]
name = "pyneuroglm"
version = "2025.7.18"
description = "A Python port of neuroGLM"
readme = "README.md"
authors = [
    { name = "yuanz", email = "yuanz271@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.3",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]

[tool.pydocstyle]
convention = "numpy"
add-ignore = [
    "D107", # Missing docstring in __init__ (dataclasses often self-document)
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["D"]

[tool.ruff.lint.per-file-ignores]
"example/tutorial.ipynb" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
